--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack-dev-server --open",
     "temp": "cross-env NODE_ENV=development webpack",
-    "build": "cross-env NODE_ENV=prodaction webpack --mode production "
+    "build": "cross-env NODE_ENV=production webpack --mode production "
   },
   "repository": {
     "type": "git",
